--- a/lab1.Rmd
+++ b/lab1.Rmd
@@ -78,7 +78,54 @@ Lets say we wante dto combine tree and legal status
 sf_trees_unite <- sf_trees %>%
   unite("id_status", tree_id:legal_status, sep = "_cool!_")
     
-
 ```
 
+### Make some actual maps of blackwood acacia trees in SF. 
+
+`st_as_sf()` to convert latitude and longitude to spatial coordinates. 
+
+```{r}
+blackwood_acacia_sp <- blackwood_acacia %>%
+  drop_na(longitude, latitude) %>%
+  st_as_sf(coords = c("longitude", "latitude"))
+
+st_crs(blackwood_acacia_sp) = 4326
+
+
+ggplot(data =blackwood_acacia_sp) +
+  geom_sf(color = "darkgreen")
+```
+
+Read in San Francisco roads shapefile.
+
+```{r}
+sf_map <- read_sf(here("data", "sf_map", "tl_2017_06075_roads.shp"))
+
+st_transform(sf_map, 4326)
+
+ggplot(data = sf_map) +
+  geom_sf()
+```
+
+Want roads as a background map for acacia trees so need them in the same cooridnate reference system the same CRS. 
+Find out what CRS the data is in by going in the console and typing st_transorm(sf_map) and see that the CRS is in 4269.
+
+
+
+Combine blackwood acacia tree observations and the san francisco roads map. 
+```{r}
+ggplot() +
+  geom_sf(data = sf_map, size = 0.1, color = "darkgray") +
+  geom_sf(data = blackwood_acacia_sp, size = 0.5, color = "red") +
+  theme_void()
+```
+
+Now to create an interactive map. 
+
+```{r}
+tmap_mode("view")
+
+tm_shape(blackwood_acacia_sp) +
+  tm_dots()
+```
 
